# vending-machine-api-fastapi

./: README.md  docker-compose.yml  main.py  pyproject.toml  run.sh
src/core/: config.py
src/crud/: base.py
src/db/: session.py
