[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = ""
authors = ["ibrahim hamzat <“hamat.ibrahim@gmail.com”>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
SQLAlchemy = "^1.4.44"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
alembic = "^1.8.1"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
